# rbcn25-mastering-robotcode

./: .gitignore  .pre-commit-config.yaml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: run_tests.yml
basic/python_libs/: example.py
basic/tests/: example.robot
demo/: .gitignore  LICENSE.txt  README.md  pyproject.toml  robot.toml
demo/scripts/: init-something.py  robotcode_analyze.sh
demo/src/demo/: myrsc.resource
demo/src/demo/config/: webapp.resource
demo/src/example/: __init__.py
demo/src/example/browser/: todo_app.resource
demo/src/example/config/: common.resource  webapp.resource
demo/tests/: __init__.robot  browser.robot
demo/tests/01_simple/: test.robot
demo/tests/02_web_app/: __init__.robot  browser.robot
demo/todo-app/: package-lock.json  package.json  vite.config.ts
demo/todo-app/src/: App.vue
docs/: index.md
hatch/: .gitignore  README.md  pyproject.toml
hatch/flask/: webapp_1.py  webapp_2.py
hatch/flask/templates/: index_1.html  index_2.html  success.html
hatch/src/example/: __about__.py  mylib.py
hatch/tests/: browser.robot  test.robot
public/reports/: index.html  log.html  output.xml  playwright-log.txt  report.html
